[metadata]
license_file = LICENSE
name = keyrings.google-artifactregistry-auth
version = 0.0.3
author = Megan Kuo
author_email = megankuo@google.com
description = Keyring backend for Google Auth tokens
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/GoogleCloudPlatform/artifact-registry-python-tools
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =
	keyring
	google-auth
	requests
	pluggy
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"

	# local

[options.entry_points]
keyring.backends =
	Google Auth = keyrings.gauth
tox =
	tox_bootstrap = google_artifactregistry_auth.tox_bootstrap
